working on ghost

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "my-addon-key",
-  "displayName": "My Add-on Name",
-  "description": "You add-on description",
+  "name": "dhezl-ghost",
+  "displayName": "Ghost",
+  "description": "Dave's ghostbot",
   "version": "0.1.0",
   "author": {
-    "name": "My Name",
-    "url": "http://mycompany.com"
+    "name": "David Hezlep",
+    "url": "http://razorfish.com"
   },
   "license": "Apache 2.0",
   "engines": {
